changes configure call

--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -109,7 +109,8 @@ script: |
 
   # Create the release tarball using (arbitrarily) the first host
   ./autogen.sh
-  CONFIG_SITE=${BASEPREFIX}/`echo "${HOSTS}" | awk '{print $1;}'`/share/config.site ./configure --prefix=/
+  #CONFIG_SITE=${BASEPREFIX}/`echo "${HOSTS}" | awk '{print $1;}'`/share/config.site ./configure --prefix=/
+  ./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --enable-upnp-default
   make dist
   SOURCEDIST=`echo __decenomy__-*.tar.gz`
   DISTNAME=`echo ${SOURCEDIST} | sed 's/.tar.*//'`
@@ -139,13 +140,19 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
-    #./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --enable-upnp-default
+    ./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --enable-upnp-default
     #make -j $(nproc) HOST=${i}
 
+    # fails libdb4.8++-dev headers
     #./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --enable-upnp-default ${CONFIGFLAGS}
+
+    # fails pivx.cpp
     #CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
-    ./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
+
+    # fails libdb4.8++-dev headers
+    #./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
     #make ${MAKEOPTS}
+
     make HOST=${i}
 
     make install-strip DESTDIR=${INSTALLPATH}
