--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -28,8 +28,8 @@ packages:
 - "python3-dev"
 - "python3-setuptools"
 - "fonts-tuffy"
-- "libdb4.8-dev"
-- "libdb4.8++-dev"
+#- "libdb4.8-dev"
+#- "libdb4.8++-dev"
 remotes:
 #- "url": "https://github.com/zimbora/dsw.git" use it later on
 - "url": "/home/jsilva/dsw-test"
@@ -144,6 +144,7 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
+    ./contrib/install_db4.sh
     ./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --enable-upnp-default
     make -j $(nproc) HOST=${i}
 
