--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -102,7 +102,7 @@ script: |
 
   # Build dependencies for each host
   for i in $HOSTS; do
-    make HOST="${i}"
+    make HOST=${i}
   done
 
   # Faketime for binaries
