--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -100,9 +100,10 @@ script: |
   mkdir -p ${BASEPREFIX}/SDKs
   tar -C ${BASEPREFIX}/SDKs -xf ${BUILD_DIR}/MacOSX10.11.sdk.tar.xz
 
+  cd ${BASEPREFIX}
   # Build dependencies for each host
   for i in $HOSTS; do
-    make HOST=${i}
+    make -j 2 HOST=${i}
   done
 
   # Faketime for binaries
