removes installed package

--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -189,24 +189,23 @@ script: |
     mkdir -p deploy/macos
     #cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt ${NAME}-Core.dmg deploy/macos/
     cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/macos/
-    cd deploy/macos
 
+    cd deploy/macos
     FILENAMES=$(find ${BASE_NAME}* | sort)
     for i in ${FILENAMES}; do
       echo ${i} | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${i}-osx64.tar.gz
     done
-
     cd ../..
 
     make deploy
     ${WRAP_DIR}/dmg dmg "${OSX_VOLNAME}.dmg" ${OUTDIR}/${DISTNAME}-osx-unsigned.dmg
 
-    cd installed
-    find . -name "lib*.la" -delete
-    find . -name "lib*.a" -delete
-    rm -rf ${DISTNAME}/lib/pkgconfig
-    find ${DISTNAME} | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${DISTNAME}-${i}.tar.gz
-    cd ../../
+    #cd installed
+    #find . -name "lib*.la" -delete
+    #find . -name "lib*.a" -delete
+    #rm -rf ${DISTNAME}/lib/pkgconfig
+    #find ${DISTNAME} | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${DISTNAME}-${i}.tar.gz
+    #cd ../../
   done
 
   #FILENAMES=$(find ${NAME}* | sort)
