--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -101,7 +101,7 @@ script: |
 
   # Build dependencies for each host
   for i in $HOSTS; do
-    make -j 2 -C ${BASEPREFIX} HOST=${i}
+    make -j 2 -C ${BASEPREFIX}
   done
 
   # Faketime for binaries
