--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -157,6 +157,12 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
+    # Faketime for depends so intermediate results are comparable
+    export PATH_orig=${PATH}
+    create_global_faketime_wrappers "2000-01-01 12:00:00"
+    create_per-host_faketime_wrappers "2000-01-01 12:00:00"
+    export PATH=${WRAP_DIR}:${PATH}
+
     cd ${BASEPREFIX}
     # Build dependencies for each host
     make -j 2 HOST=${i}
