--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -137,6 +137,12 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
+    # without it qt/pivx.cpp fails during compilation
+    cd ${BASEPREFIX}
+    # Build dependencies for each host
+    make -j 2 HOST=${i}
+    cd ..
+
     CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=$(pwd)/depends/${i} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
     make ${MAKEOPTS}
     make install-strip DESTDIR=${INSTALLPATH}
