--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -137,7 +137,8 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
-    ls ../$SOURCEDIST
+    ls .
+    ls depends
     # without it qt/pivx.cpp fails during compilation
     cd ${BASEPREFIX}
     # Build dependencies for each host
