--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -89,7 +89,7 @@ script: |
   export PATH=${WRAP_DIR}:${PATH}
 
   cd dsw
-  BASEPREFIX=`pwd`/depends
+  BASEPREFIX=$(pwd)/depends
 
   mkdir -p ${BASEPREFIX}/SDKs
   tar -C ${BASEPREFIX}/SDKs -xf ${BUILD_DIR}/MacOSX10.11.sdk.tar.xz
@@ -137,12 +137,16 @@ script: |
     mkdir src/obj
     cp ../src/obj/build.h src/obj/
 
+    ls .
+    build_dir=$(pwd)
+
     # without it qt/pivx.cpp fails during compilation
     cd ${BASEPREFIX}
     # Build dependencies for each host
     make -j 2 HOST=${i}
     cd ..
 
+    cd ${build_dir}
     CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=$(pwd)/depends/${i} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
     make ${MAKEOPTS}
     make install-strip DESTDIR=${INSTALLPATH}
@@ -165,8 +169,8 @@ script: |
     make deploy
     ${WRAP_DIR}/dmg dmg "${OSX_VOLNAME}.dmg" ${OUTDIR}/${DISTNAME}-osx-unsigned.dmg
 
-    cd ${INSTALLPATH}
-    #cd installed
+
+    cd installed
     ls .
     find . -name "lib*.la" -delete
     find . -name "lib*.a" -delete
