--- a/contrib/gitian-descriptors/gitian-win2.yml
+++ b/contrib/gitian-descriptors/gitian-win2.yml
@@ -24,8 +24,7 @@ packages:
 - "python3"
 - "rename"
 remotes:
-#- "url": "https://github.com/zimbora/dsw.git" use it later on
-- "url": "/home/jsilva/dsw-test"
+- "url": "https://github.com/zimbora/dsw.git"
   "dir": "dsw"
 files: []
 script: |
