--- a/contrib/gitian-descriptors/gitian-win2.yml
+++ b/contrib/gitian-descriptors/gitian-win2.yml
@@ -32,9 +32,9 @@ script: |
 
   WRAP_DIR=$HOME/wrapped
   HOSTS="x86_64-w64-mingw32"
-  NAME = '__Decenomy__'
+  NAME = "__Decenomy__"
   BASE_NAME="__decenomy__"
-  ZIP_NAME = '__DSW__'
+  ZIP_NAME = __DSW__"
   CONFIGFLAGS="--enable-reduce-exports --disable-bench --disable-gui-tests"
   FAKETIME_HOST_PROGS="ar ranlib nm windres strip objcopy"
   FAKETIME_PROGS="date makensis zip"
